fixed truncation stupid Jqmobile

--- a/web/css/guff.css
+++ b/web/css/guff.css
@@ -2,3 +2,6 @@
 #the_map img.loading { margin-top: 50px; }
 ul li p { padding-top: 5px; color: #088A4F; }
 ul li span { font-weight: normal; font-style: italic; }
+.ui-li-desc {
+white-space: normal;
+}
